updated css properties

--- a/client/contact/src/index.css
+++ b/client/contact/src/index.css
@@ -28,10 +28,15 @@ h2 {
   color: #2980b9;
 }
 
+.contact-detail-container {
+  display: flex;
+  gap: 20px;
+}
+
 .contact-details {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
+  width: 100%;
 }
 
 .contact-details div {
@@ -53,25 +58,18 @@ h2 {
   color: #34495e;
 }
 
-/* Responsive Styles */
-@media (max-width: 768px) {
-  .contact-details {
-    flex-direction: column;
-  }
-}
-
 /* Form.css */
-
-.contact-form-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.contact-us-page {
   padding: 20px;
   background-color: #f9f9f9;
+  gap: 10px;
+}
+
+.contact-form-container {
+  border: 1px solid #ddd;
   border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  max-width: 600px;
-  margin: auto;
+  width: 100%;
+  background-color: white;
 }
 
 h4 {
@@ -83,7 +81,6 @@ h4 {
 .contact-form {
   display: flex;
   flex-direction: column;
-  width: 100%;
 }
 
 .contact-form h1 {
@@ -102,12 +99,12 @@ h4 {
 
 .contact-form input,
 .contact-form textarea {
-  padding: 6px;
+  padding: 10px;
   border: none;
   border-radius: 4px;
-  margin-bottom: 15px;
+  margin: 15px;
   font-size: 1em;
-  width: 100%;
+  width: unset;
   background-color: #ffffff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
@@ -118,6 +115,7 @@ h4 {
   border: none;
   padding: 15px;
   font-size: 1em;
+  margin: 15px;
   cursor: pointer;
   border-radius: 4px;
   transition: background-color 0.3s ease;
@@ -131,6 +129,12 @@ h4 {
   color: #e74c3c; /* Red color for error messages */
   font-size: 0.9em;
   text-align: center; /* Center error messages */
+}
+
+@media (max-width: 1000px) {
+  .contact-detail-container {
+    flex-direction: column;
+  }
 }
 /* ThankYou.css */
 
