--- a/client/contact/src/index.css
+++ b/client/contact/src/index.css
@@ -189,6 +189,11 @@ h4 {
   text-align: center;
 }
 
+.back-button a {
+  color: white;
+  text-decoration: none;
+}
+
 /* Button hover effect */
 .back-button:hover {
   background-color: #2980b9; /* Darker blue on hover */
@@ -430,7 +435,8 @@ li a:hover {
   text-align: center;
   border-top: 1px solid #ccc; /* Light border at the top */
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
+  position: fixed;
   align-items: center;
   gap: 10px; /* Space between items */
   bottom: 0; /* Ensure it stays at the bottom */
@@ -441,6 +447,23 @@ li a:hover {
   margin: 0;
   color: #333; /* Dark gray text color */
   font-size: 14px;
+}
+
+.footer-terms {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
+.footer-terms div {
+  padding: 10px;
+}
+
+.footer-terms div:hover {
+  border: 1px;
+  border-radius: 8px;
+  cursor: pointer;
+  background-color: #3498db;
 }
 
 /* Responsive styles */
